--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="theme-color" content="#121212" />
   <meta name="description" content="Consulte a previsão do tempo de qualquer cidade com visual moderno e suporte offline. Desenvolvido por Gustavo Murai.">
-  
+
   <title>Previsão do Tempo 🌤️</title>
 
   <!-- CSS externo -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
-  <!-- Ícones e Manifest -->
+  <!-- Ícones e Manifest (corrigido) -->
   <link rel="icon" href="icons/icon.svg" type="image/svg+xml" />
   <link rel="icon" href="icons/icon-192.png" type="image/png" />
-  <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
+  <link rel="manifest" href="manifest.json" />
 </head>
 <body>
   <noscript>
